# packppo

./: evaluate.py  main.py  pyproject.toml  run_training.py  train.py
assets/: multi_ant_2.xml  multi_ant_3.xml  multi_go1_2.xml  multi_go1_3.xml
envs/: __init__.py  make_env.py  multi_ant_base.py
envs/tasks/: __init__.py  coop_push.py  follow_the_leader.py  line_formation.py  v_formation.py
networks/: __init__.py  agent.py  attention.py  critic.py
utils/: __init__.py  curriculum.py  popart.py
